--- a/sliderule_dsi_json_exercise.ipynb
+++ b/sliderule_dsi_json_exercise.ipynb
@@ -1658,39 +1658,24 @@
     "# Some of the corresponding mjtheme_names are missing and need to \n",
     "# be populated based on the correponding mjtheme_code.\n",
     "# To do this create a map of the mjtheme_code to the mjtheme_name\n",
-    "mjtheme_map = {1:\"Economic management\", \\\n",
-    "               2:\"Public sector governance\", \\\n",
-    "               3:\"Rule of law\", \\\n",
-    "               4:\"Financial and private sector development\", \\\n",
-    "               5:\"Trade and integration\", \\\n",
-    "               6:\"Social protection and risk management\", \\\n",
-    "               7:\"Social dev/gender/inclusion\", \\\n",
-    "               8:\"Human development\", \\\n",
-    "               9:\"Urban development\", \\\n",
-    "               10:\"Rural development\", \\\n",
-    "               11:\"Environment and natural resources management\"}\n",
-    "\n",
-    "# Define a function that will check for a missing mjtheme_name\n",
-    "# and populate that mjtheme_name with the corresponding mjtheme_code\n",
-    "def fill_blank_name(row):\n",
-    "    if row[\"name\"] == \"\":\n",
-    "        return mjtheme_map[int(row[\"code\"])]\n",
-    "    else:\n",
-    "        return row[\"name\"]\n",
+    "# df_mjthemes_map = df_mjthemes.groupby(\"code\")[\"name\"].unique().reset_index()  <- Not working right\n",
+    "df_mjthemes_map = df_mjthemes.groupby(\"code\")[\"name\"].describe().reset_index()\n",
+    "df_mjthemes_map = df_mjthemes_map[[\"code\",\"top\"]].rename(columns={\"top\":\"name\"})\n",
     "    \n",
-    "# Execute the newly defined function over all rows in the mjtheme_name\n",
-    "# column of the DataFrame using the .apply() method      \n",
-    "df_mjthemes[\"name\"] = df_mjthemes.apply(fill_blank_name, axis=1)\n",
+    "# Join the newly mapped mjtheme_code:mjtheme_name Dataframe with the original\n",
+    "# mjtheme Dataframe to populate the missing mjtheme_name values    \n",
+    "df_mjthemes_fill = df_mjthemes[[\"code\"]].merge(df_mjthemes_map, how=\"left\", on=\"code\")\n",
+    "df_mjthemes_fill\n",
     "\n",
     "# Group the corrected DataFrame by major project theme, then aggregate \n",
     "# by count\n",
-    "count_by_theme = df_mjthemes.groupby([\"code\",\"name\"]).size() \\\n",
+    "count_by_theme = df_mjthemes_fill.groupby([\"code\",\"name\"]).size() \\\n",
     "                    .reset_index(name=\"count\") \\\n",
     "                    .sort_values(\"count\", ascending=False)\n",
-    "\n",
+    "        \n",
     "# Display major project themes in order of occurence\n",
     "count_by_theme\n",
-    "#count_by_theme[\"count\"].sum()"
+    "# count_by_theme[\"count\"].sum()"
    ]
   }
  ],
